--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,12 @@ form {
     margin: 0;
     padding: 10px;
 }
+
+form label {
+    display: block;
+    margin-bottom: 8px;
+    font-weight: bold; /* Adiciona negrito ao texto do rótulo */
+}
  input {
     width: 50%;
     padding: 8px; 
