--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,19 @@
         width: 25%;
         height: 30px;        
         margin: 10px;
-        border-radius: 5px;               
+        border-radius: 5px;
+        background-color: #007BFF;         
+        color: #fff; 
+        font-weight: bold;     
+        border: none;
+        cursor: pointer;
+        transition: box-shadow 0.3s ease;
+    }
+
+    button:active {
+        background-color: #0056b3;
+        transform: translateY(2px); 
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3); 
     }
 
     .links {
@@ -59,4 +71,5 @@ form label {
     
  }
 
+ 
  
