--- a/styles.css
+++ b/styles.css
@@ -71,5 +71,19 @@ form label {
     
  }
 
- 
- 
+ .checkbox-container {
+    display:flex;
+    align-items: flex-start;
+    margin-left: 90px;
+}
+
+input[type="checkbox"] {
+    width: 15px; 
+    height: 15px; 
+    margin-right: 10px;     
+}
+
+label {
+    font-size: 16px;
+    align-self: center;
+}
