--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
+   *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;    
+   }
+
    body {
     background-color: #8f9cb3;
     justify-content: center;
     align-items: center;
-    display: flex;
     margin: 0;
-    height: 75vh;
+    height: 90vh;
     text-align: center;
-}
+}  
 
     button{
         width: 25%;
@@ -39,20 +44,46 @@
     }
 
     .center-box {
-        max-width: 400px;        
-        min-height: 400px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        max-width: 420px;
+        min-height: 420px;
         background-color: #dce4f4;
-        padding: 20px;
+        padding: 0px;
         border-radius: 10px;
         box-shadow: 0 0 10px #d74ea4;
-        text-align: center;        
-}
+        text-align: center;
+        overflow: hidden;*/        
+    }
 
 .imagem img {    
     width: 70%;     
     align-items: center;
     margin-top: 25px;
     margin-bottom: 25px;
+}
+
+.logo-orkut{
+    width: 40px;    
+}
+
+.header, .nav-header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 10%;
+}
+
+.header{
+    background-color: aqua;
+    box-shadow: 0px 0px 10px #d74ea4;    
+    height: 3.5em;
+    top: 0;
+    position: fixed;    
+    display: flex;
+    width: 100%;
 }
 
 form {
@@ -86,4 +117,43 @@ input[type="checkbox"] {
 label {
     font-size: 16px;
     align-self: center;
+}
+nav{
+    padding: 5px;    
+    border-radius: 10px;  
+    font-weight: bold;  
+}
+
+nav li{
+    display: inline-block;
+
+}
+
+nav li a{
+    display: inline-block;
+    text-decoration: none;
+    margin-right: 15px;
+    padding: 5px;
+}
+
+nav li a:hover{
+    background-color: #d74ea4;
+    border-radius: 10px;  
+    color: #fff;  
+    padding: 5px;
+}
+
+.dropdown-menu {
+    position: absolute;
+    background-color: #8f9cb3;
+    display: none;
+    border-radius: 10px;
+}
+
+.dropdown-menu a {
+    display: block;
+}
+
+.dropdown:hover .dropdown-menu{
+    display: block;
 }
